fix: Change row class to flex with wrap

--- a/src/css/shkolo/__global.css
+++ b/src/css/shkolo/__global.css
@@ -146,3 +146,9 @@ background-image:
 .rounded {
     border-radius: var(--radius) !important;
 }
+
+.row {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
